@@ -1,12 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.201 2005/12/04 20:34:57 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.202 2005/12/04 21:29:34 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
 
   4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added StartupServices screen
   fixed some typos introduced by the CC-to-IP networking code
+  only add interface to IP if type is 'dhcp' or 'static'
+  StartupServices screen now works
+  move StartupServices after ExtraPackages
 
   3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   added CC networking pre-loading to Networking screen
